reword research interests

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                     <span style="display:inline-block;"class="icon solid style2 major fa-dna"></span> + <span style="display:inline-block;"class="icon solid style2 major fa-home"></span>
                                 </div>
                                 <h3>Translational Informatics</h3>
-                                <p>We are experiencing a new wave of data types entering the health ecosystem. At the forefront is the human genome and social determinants of health. Robust clinical genomics offers a veritable blueprint to guide <b>precision medicine</b> efforts. An equally promising field, social determinants of health, presents the opportunity to capture the "metadata" of an individual's lifestyle (income, social relationships, living situation, etc.). This lifestyle data, when properly formalized and standardized, can be as informative as any genomic variant.</p>
+                                <p>We are working to introduce a new wave of data types into the health ecosystem. At the forefront is the human genome and social determinants of health. Robust clinical genomics offers a veritable blueprint to guide <b>precision medicine</b> efforts. An equally promising field, social determinants of health, presents the opportunity to capture the "metadata" of an individual's lifestyle (income, social relationships, living situation, etc.). This lifestyle data, when properly formalized and standardized, can be as informative as any genomic variant.</p>
                             </section>
                             <section>
                                 <span class="icon solid style2 major fa-laptop-medical"></span>
