remove hyperlinks for determinantes and gff3

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <!-- Gallery -->
                             <div class="gallery style2 big lightbox">
                                 <article>
-                                    <a href="#" class="image">
+                                    <a class="image">
                                         <img src="images/gallery/determinantes.png" alt="" />
                                     </a>
                                     <div class="caption">
@@ -202,7 +202,7 @@
                                     </div>
                                 </article>
                                 <article>
-                                    <a href="#" class="image">
+                                    <a class="image">
                                         <img src="images/gallery/gff3.png" alt="" />
                                     </a>
                                     <div class="caption">
