--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<h1 style="display:inline;">Michael Watkins<h2 style="display:inline;"></h2></h1>
 							<p style="margin-bottom:10px"class="major">translational informatics, clinical interoperability, clinical decision support</p>
 							<ul class="actions stacked">
-								<li><a id="toggleButton" onclick="toggleInterests()" class="button big wide">Read More</a></li>
+								<li><a id="toggleButton" onclick="toggleInterests()" class="button small">Read More</a></li>
 							</ul>
 						</div>
                         <a style="position: fixed;z-index:100;"onclick="openNav()" class="button small">&#9776; Jump to...</a>
