fill jump button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<li><a id="toggleButton" onclick="toggleInterests()" class="button small">Read More</a></li>
 							</ul>
 						</div>
-                        <a style="position: fixed;z-index:100;"onclick="openNav()" class="button small">&#9776; Jump to...</a>
+                        <a style="position: fixed;z-index:100;"onclick="openNav()" class="button small white-hover">&#9776; Jump to...</a>
                         <div class="sidenav" id="mySidenav">
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <a href="#education">Education</a>
