--- a/app-demos/Determinantes-Sociales/index.html
+++ b/app-demos/Determinantes-Sociales/index.html
@@ -30,7 +30,7 @@
                           <div class="row">
                               <div class="col-md-6">
                                   <p>
-                                      <u>Patient search and verification:</u> a DNI number is often used as a unique patient identifier in Peru. This initial screen allows users to search for patients who have already been registered. <b>In this demo, only the patient with a DNI of 12345678-9 will return a positive search result</b>.
+                                      <u>Patient search and verification:</u> a DNI number is often used as a unique patient identifier in Peru. This initial screen allows users to search for patients who have already been registered.
                                   </p>
                                   <ul>
                                       <li>
@@ -117,7 +117,7 @@
       <h1 class="h3 mb-1 font-weight-normal">Determinantes Sociales</h1>
       <p class="mt-4 mb-3 text-muted">Ingrese DNI para buscar paciente</p>
       <div class="input-group">
-          <input id="dni" class="form-control rounded" placeholder="DNI" value="12345678-9" autofocus>
+          <input id="dni" class="form-control rounded" placeholder="DNI" value="12345678-9" readonly>
           <button id="dni-button" type="button" onclick="findPatient()" class="btn btn-primary"><i feather="search"></i>Buscar</button>
         </div>
         <div id="patient-search-result" style="visibility:hidden" class="my-3 p-3 bg-white rounded box-shadow">
