update gallery wording

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <section id="app-gallery" style="padding-bottom:60px" class="wrapper style1">
                         <div style="padding-top:30px;margin-left:50px;padding-bottom:20px"class="inner">
                             <h2 style="margin-bottom:0;">App Gallery</h2>
-                            <i>Select from the gallery below to explore a limited-functionality demo</i>
+                            <i>Select from the gallery below to explore limited-functionality demos</i>
                         </div>
 
                         <!-- Gallery -->
