reword interop description

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <section>
                                 <span class="icon solid style2 major fa-laptop-medical"></span>
                                 <h3>Clinical Interoperability</h3>
-                                <p>While the transition from paper to electronic medical records is certainly an impressive accomplishment of the past decade, the medical informatics community now faces an even more daunting task--interoperability. Data architects, terminologists, and informaticists have come together in an unprecedented effort to develop clinical data models and exchange protocols that emphasize extensibile standardization. With these standards now entering federal legislation, previously siloed innovations are turning collaborative and clinical interoperability is approaching reality.</p>
+                                <p>While the transition from paper to electronic medical records is certainly an impressive accomplishment of the past decade, the medical informatics community now faces an even more daunting task--interoperability. Data architects, terminologists, and informaticists have come together in an unprecedented effort to develop clinical data models and RESTful exchange protocols that emphasize extensibile standardization. With these standards now entering federal legislation, previously siloed innovations are turning collaborative and clinical interoperability is approaching reality.</p>
                             </section>
                             <section>
                                 <span class="icon solid style2 major fa-user-md"></span>
