--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Clinical Informatics</p>
                             </header>
-                            HL7 Infobutton, CDS Hooks, SMART on FHIR, CQL, bulkFHIR
+                            HL7 Infobutton, CDS Hooks, SMART on FHIR, CQL
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Genomics</p>
                             </header>
@@ -150,7 +150,7 @@
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Analytics</p>
                             </header>
-                            RStudio, TensorFlow, Keras, Bayes
+                            RStudio, TensorFlow
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Extracurricular</p>
                             </header>
