--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Application Architecture</p>
                             </header>
-                            ExpressJS, NodeJS, Flask
+                            ExpressJS, Flask
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Clinical Data Standards and Terminologies</p>
                             </header>
