add pdf and pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<h1 style="display:inline;">Michael Watkins<h2 style="display:inline;"></h2></h1>
 							<p style="margin-bottom:10px"class="major">translational informatics, clinical interoperability, clinical decision support</p>
 							<ul class="actions">
-                                <li><a class="button small">PDF</a></li>
+                                <li><a href="Watkins_CV.pdf" class="button small">PDF</a></li>
 								<li><a id="toggleButton" onclick="toggleInterests()" class="button small">Read More</a></li>
 							</ul>
 						</div>
