--- a/app-demos/LocalVar/detail.html
+++ b/app-demos/LocalVar/detail.html
@@ -16,24 +16,22 @@
     <script src="static/js/script.js"></script>
   </head>
 
-  <body>
+  <body onload="editable()">
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0">
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#"><img src="static/images/icon.png" width="25" height="25"/> LocalVar</a>
     </nav>
-    <div id="initializing" class="initializing"><span class="initializing_text pl-5">Initializing...</span><span class="initializing_sub pl-5">This can take longer for large collections</span></div>
-    <div id="non" class="container-fluid">
       <div class="row">
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
           <div class="sidebar-fixed">
             <ul id="sidebar-list" style="margin-top:70px" class="nav flex-column">
               <li id="new-collection" class="nav-item">
-                <a class="nav-link active" href="index.html">
+                <a class="nav-link" href="index.html">
                   <img class="pb-1"src="static/icons/file-plus.svg"></img>
                   New Collection
                 </a>
               </li>
               <li id="viewer" class="nav-item">
-                <a class="nav-link" href="viewer.html">
+                <a class="nav-link active" href="viewer.html">
                   <img class="pb-1"src="static/icons/list.svg"></img>
                   View Collection
                 </a>
@@ -98,72 +96,77 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 mt-5  pt-3 px-4">
-            <div id="modal" class="modal">
-                 <!-- The modal content -->
-                 <div class="modal-content text-center"><h4>Warning!</h4>
-                     <div style="padding:50px;">
-                         <h6>This will delete your existing collection and history</h6>
-                   </div>
-                   <div class="row">
-                       <div class="col-md-6">
-                           <a class="btn btn-outline-success btn-block" href="/delete">Confirm</a>
+            <div class="pb-2 mb-3 border-bottom ">
+                <a class="btn btn-primary" href="viewer.html"><img src="static/icons/chevrons-left.svg"> Back</a>
+                <button style="float:right;display:inline" class="btn btn-sm btn-danger mt-1 ml-2") onclick="alert('Deleting records supported in demo.')"><img src="static/icons/x.svg"></button><h4 id="record-id" class="mt-2"style="float:right"></h4>
+            </div>
+            <div>
+                <table id="detail-table" class="table table-bordered table-sm mb-0">
+                    <thead style="background-color:#F8F9FA">
+                        <th>ID</th>
+                        <th>Result</th>
+                        <th>Gene</th>
+                        <th>Interpretation</th>
+                        <th>StandardizedResult</th>
+                        <th>CodingDNARef</th>
+                        <th>ProteinRef</th>
+                        <th>RefSeqID</th>
+                        <th>Note</th>
+                        <th>HGVS</th>
+                        <th>VRS</th>
+                    </thead>
+                    <tbody id="detail-body"></tbody>
+                </table>
+                <script>
+                    let url = window.location.search;
+                    let id = url.split('id=')[1];
+                    fillTable(id)
+                </script>
+                <div style="height:100vh" class="row mt-0 mr-0 pr-0">
+                    <div class="col-md-9 mt-2">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h6 style="display:inline">Click on a cell value to edit <img class="pb-1"src="../static/icons/edit-3.svg"></h6>
+                                <button id="save-edit" style="display:none" class="ml-3 btn btn-sm btn-success" onclick="alert('Manual editing not supported in demo.')">Save</button>
+                                <button id="cancel-edit" style="display:none" class="btn btn-sm btn-danger">Cancel</button>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <a class="btn btn-outline-danger btn-block" href="/">Cancel</a>
+                        <div class="row mt-3">
+                            <div class="col-md-12">
+                                <h3 id="record-hgvs" class="pt-3"></h3>
+                                <h5 id="record-int">Interpretation:</h5>
+                                <hr />
+                                <h5 style="display:inline; font-weight:normal" class="text-muted"><i>Interpretation (ClinVar)</i>:</h5>
+                                <button style="display:inline; float:right" onclick="alert('Redirect to ClinVar supported in demo.')" class="btn btn-primary">Evidence <img class="pb-1"src="../static/icons/external-link.svg"></button>
+                                <h5 id="cv-int" class="text-muted" style="font-weight:normal"></h5>
+                                <br />
+                                <h5 class="text-muted" style="font-weight:normal"><i>Synonym(s)</i>:</h5>
+                                <h5 id="cv-syn" class="text-muted" style="font-weight:normal"></h5>
+                            </div>
                         </div>
-                     </div>
-                 </div>
-            </div>
-            <script type="text/javascript">
-               modal("{{ warning }}")
-            </script>
-            <script type="text/javascript">
-               if('{{ alert }}' === 'true'){
-                   alert('You must first upload a collection.')
-               }
-            </script>
 
-            <div class="pb-2 mb-3 border-bottom">
-                <h1 class="h2">Getting started...</h1>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary btn-sm">Select .csv file</button>
-                <label for="fileInput">demo.csv <code>(locked for demo)</code></label><br />
-                <span>The first column should contain unique identifiers</span>
-            </div>
 
-            <code>(Drop-downs shown for demo, but selections will not be saved)</code>
-            <div class="form-group">
-                <label for="hgvsSelect">Which column contains the full HGVS expressions? (ex: NM_001171.5:c.1091C>G)</label>
-                <select class="form-control col-select mb-3" name="hgvsSelect">
-                    <option>ID</option>
-                    <option>Result</option>
-                    <option>Gene</option>
-                    <option>Interpretation</option>
-                    <option>StandardizedResult</option>
-                    <option>CodingDNARef</option>
-                    <option>ProteinRef</option>
-                    <option>RefSeqID</option>
-                    <option>Note</option>
-                    <option>HGVS</option>
-                </select>
-                <label for="intSelect">Which column contains the interpretations of the variants?</label>
-                <select class="form-control col-select" name="intSelect">'
-                    <option>ID</option>
-                    <option>Result</option>
-                    <option>Gene</option>
-                    <option>Interpretation</option>
-                    <option>StandardizedResult</option>
-                    <option>CodingDNARef</option>
-                    <option>ProteinRef</option>
-                    <option>RefSeqID</option>
-                    <option>Note</option>
-                    <option>HGVS</option>
-                </select>
-                <button class="btn btn-small btn-success mt-3" onclick="showInitializing()">Load Collection</button>
+
+                    </div>
+                    <div class="col-md-3 border border-top-0" style="background-color:#F8F9FA">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h3 style="font-weight: normal;" class="pt-3 pb-3 text-muted text-center">History</h3>
+                                <pre id="record-history"></pre>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
             </div>
       </main>
       </div>
       </div>
+
+
+
+
+
   </body>
 </html>
