--- a/app-demos/LocalVar/detail.html
+++ b/app-demos/LocalVar/detail.html
@@ -126,7 +126,7 @@
                     <div class="col-md-9 mt-2">
                         <div class="row">
                             <div class="col-md-12">
-                                <h6 style="display:inline">Click on a cell value to edit <img class="pb-1"src="../static/icons/edit-3.svg"></h6>
+                                <h6 style="display:inline">Click on a cell value to edit <img class="pb-1"src="static/icons/edit-3.svg"></h6>
                                 <button id="save-edit" style="display:none" class="ml-3 btn btn-sm btn-success" onclick="alert('Manual editing not supported in demo.')">Save</button>
                                 <button id="cancel-edit" style="display:none" class="btn btn-sm btn-danger">Cancel</button>
                             </div>
@@ -137,7 +137,7 @@
                                 <h5 id="record-int">Interpretation:</h5>
                                 <hr />
                                 <h5 style="display:inline; font-weight:normal" class="text-muted"><i>Interpretation (ClinVar)</i>:</h5>
-                                <button style="display:inline; float:right" onclick="alert('Redirect to ClinVar supported in demo.')" class="btn btn-primary">Evidence <img class="pb-1"src="../static/icons/external-link.svg"></button>
+                                <button style="display:inline; float:right" onclick="alert('Redirect to ClinVar supported in demo.')" class="btn btn-primary">Evidence <img class="pb-1"src="static/icons/external-link.svg"></button>
                                 <h5 id="cv-int" class="text-muted" style="font-weight:normal"></h5>
                                 <br />
                                 <h5 class="text-muted" style="font-weight:normal"><i>Synonym(s)</i>:</h5>
