--- a/app-demos/LocalVar/viewer.html
+++ b/app-demos/LocalVar/viewer.html
@@ -130,8 +130,8 @@
                 <div class="col-md-6 ml-0 pl-0">
                     <button class="btn btn-primary mt-1" style="float:left;" onclick="searchSelect()"><img src="static/icons/search.svg"></img></button>
                     <button class="btn btn-primary mt-1" style="float:right;" onclick="newEntry()"><img class="pb-1" src="static/icons/plus.svg"></img> New</button>
-                    <button id="trash-button" class="btn btn-danger mt-1 ml-3" style="display:none;float:left;" onclick="alert('Moving records to trash is not supported in this demo.')"><img class="pb-1" src="../static/icons/trash-white.svg"></img> Trash</button>
-                    <button id="merge-button" class="btn btn-success mt-1 ml-3" style="display:none;float:left;" onclick="checkBoxMerge()"><img class="pb-1" src="../static/icons/share-2.svg"></img> Merge</button>
+                    <button id="trash-button" class="btn btn-danger mt-1 ml-3" style="display:none;float:left;" onclick="alert('Moving records to trash is not supported in this demo.')"><img class="pb-1" src="static/icons/trash-white.svg"></img> Trash</button>
+                    <button id="merge-button" class="btn btn-success mt-1 ml-3" style="display:none;float:left;" onclick="checkBoxMerge()"><img class="pb-1" src="static/icons/share-2.svg"></img> Merge</button>
                 </div>
             </div>
             <div id="add-row" style="display:none;padding-left:20px;padding-right:20px" class="row">
