update PMC in SDH paper

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                 </li>
                                 <li>
                                     <b>Watkins M</b>, Viernes B, Nguyen V, Rojas Mezarina L, Silva Valencia J, Borbolla D. 'Translating social determinants of health into standardized clinical entities', <i>Stud Health Technol Inform.</i> 2020 Jun 16;270:474-478. doi: 10.3233/SHTI200205.
-                                     <a href="https://pubmed.ncbi.nlm.nih.gov/32570429/"><i>PMID: 32570429</i></a>
+                                     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8083881"><i>PMC8083881</i></a>
                                 </li>
                                 <li>
                                     <b>Watkins M</b>, Eilbeck K. 'FHIR Lab Reports: using SMART on FHIR and CDS Hooks to increase the clinical utility of pharmacogenomic laboratory test results', <i>AMIA Jt Summits Transl Sci Proc.</i> 2020 May 30;2020:683-692.
