--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                             </header>
                             Dissertation: Addressing Barriers to the Practical Utility of Genomic Data in the Clinical Setting
                             <br />Aims:<ol style="margin:0">
-                                    <li>Removing ambiguity in variant representation (GA4GH VR-Spec, ClinVar)</li>
-                                    <li>Bringing genomic data into the clinical ecosystem (HL7 FHIR, FHIR Genomics Reporting IG, SMART on FHIR, CDS Hooks, CQL)</li>
-                                    <li>Increasing the clinical usability of genomic data via CDS (knowledge retrieval, genomic information needs, HL7 InfoButton)</li>
+                                    <li>Working toward comprehensive knowledge retrieval and globally unique representation for instances of biological sequence variation (HGVS, ClinVar, GA4GH VRS)</li>
+                                    <li>Harnessing clinical interoperability and decision support standards to integrate computable genomic data artifacts into the EHR (HL7 FHIR, FHIR Genomics Reporting IG, SMART on FHIR, CDS Hooks, CQL)</li>
+                                    <li>Clinical genomic information needs</li>
                                 </ol>
                             Dissertation Advisors: Karen Eilbeck (Chair), Ph.D.; Guilherme Del Fiol, M.D., Ph.D.; Scott Narus, Ph.D., M.S.; Rong Mao, M.D., FACMG; Wendy Kohlmann, M.S.
                             <header style="padding-top:30px">
